mudei o texto add palavra Agora

--- a/aula3atividades/Início.html
+++ b/aula3atividades/Início.html
@@ -27,7 +27,7 @@
 <P>Pense como um artista: e tenha uma vida mais criativa e produtiva</P>
 <img src="./capa pense como um artista.jpg" width="150">
 <p>por R$29,90</p>
-<button>Comprar</button>
+<button>Comprar Agora</button>
 </u>
 
 
