Atualizar o atividades03.html
✅ Explicação do que eu fiz: 	•	Coloquei comentários explicando tudo: cada parte, cada tag e para que ela serve. 	•	Organizei o código para ele ficar limpo e fácil de entender. 	•	Corrigi o menu e fechei todas as tags corretamente. 	•	Mostrei como usar preço antigo cortado (<del>).

--- a/aula3atividades/atividades03.html
+++ b/aula3atividades/atividades03.html
@@ -1,74 +1,60 @@
 <!DOCTYPE html>
-<html lang="prbr">
+<html lang="pt-br"> <!-- Linguagem da página: Português do Brasil -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kamau´s Livraria </title>
+    <meta charset="UTF-8"> <!-- Suporta acentos e caracteres especiais -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Deixa o site adaptável para celular -->
+    <title>Kamau´s Livraria</title> <!-- Título que aparece na aba do navegador -->
 </head>
 <body>
+    <!-- Cabeçalho principal do site -->
     <h1>Kamau´S LIVRARIA</h1>
 
-<!--Menu navegação-->
-<nav>
+    <!-- MENU DE NAVEGAÇÃO -->
+    <nav>
+        <ul>
+            <!-- Link para a página inicial -->
+            <li><a href="./Início.html">Início</a></li>
 
-    <ul>
-    <li><a href="./Início.html">Início</a></li>
-    <li><a href="./Cadastro.html">Entrar/Cadastrar</a></li>
-    <li><a href="./Contato.html">Contato</a>
+            <!-- Link para a página de cadastro/login -->
+            <li><a href="./Cadastro.html">Entrar/Cadastrar</a></li>
 
-</nav>
+            <!-- Link para a página de contato -->
+            <li><a href="./Contato.html">Contato</a></li>
+        </ul>
+    </nav>
 
-</ul>
+    <hr> <!-- Linha para separar o menu do restante da página -->
 
-<hr>
-<!--pagina de cadastro acima-->
-<!--livro 1 pense e enriqueça-->
+    <!-- SEÇÃO DE LIVROS EM DESTAQUE -->
+    <h2>Indicados</h2>
 
-<h2>Indicados</h2>
+    <!-- LIVRO 1 -->
+    <strong><p>Pense e Enriqueça</p></strong> <!-- Título do livro em destaque -->
+    <p>Pense e enriqueça: A versão original, restaurada e revisada.</p> <!-- Descrição do livro -->
+    <img src="./capa livro pense e enriqueça.jpg" width="150"> <!-- Imagem do livro (caminho da imagem) -->
+    <p>Por R$49,99</p> <!-- Preço -->
+    <button>Comprar</button> <!-- Botão de compra -->
+    <br><br> <!-- Espaço entre os livros -->
 
-<u>
-<strong><p>Pense e Enriqueça</p></strong>
-<p>Pense e enriqueça: A versão original, restaurada e revisada.</p>
-<img src="./capa livro pense e enriqueça.jpg" width="150">
+    <!-- LIVRO 2 -->
+    <strong><p>Pense Como Um Artista:</p></strong>
+    <p>Pense como um artista: e tenha uma vida mais criativa e produtiva.</p>
+    <img src="./capa pense como um artista.jpg" width="150">
+    <p>Por R$29,90</p>
+    <button>Comprar</button>
+    <br><br>
 
-<!--livro 2 pense como um artista-->
+    <!-- LIVRO 3 -->
+    <strong><p>Pense e Ore</p></strong>
+    <p>Pense e ore: mensagens inspiradoras para um novo tempo.</p>
+    <img src="./capa de livro pense e ore.jpg" width="150">
+    <!-- Preço promocional com valor antigo cortado e novo preço -->
+    <p><del>De: R$49,90</del> Por: R$29,90</p>
+    <button>Aproveite</button>
 
-</u>
+    <hr> <!-- Linha para finalizar a seção -->
 
-<p>Por R$49,99</p>
-<button>Comprar</button>
-<br/>
-
-<u>
-<strong><p>Pense Como Um Artista: </p></strong>
-<P>Pense como um artista: e tenha uma vida mais criativa e produtiva</P>
-<img src="./capa pense como um artista.jpg" width="150">
-<p>por R$29,90</p>
-<button>Comprar</button>
-</u>
-
-<!--livro 3 pense e ore-->
-
-<u>
-<strong><p>Pense e Ore </p></strong>
-<p>pense e ore:mensagens inspiradoras para um novo tempo</p>
-<img src="./capa de livro pense e ore.jpg" width="150"
-<br/>
-<br/>
-<del>de:49,90</del>
-<por>R$29,90</por>
-<br/>
-<button>Aproveite</button>
-</u>
-
-<hr>
-
-<!--seção formulario login cadastro-->
-
-
-
-
-
+    <!-- Aqui você poderá colocar mais conteúdos futuramente, como formulário ou rodapé -->
 
 </body>
 </html>
