--- a/aula3atividades/paginaagradecimento.html
+++ b/aula3atividades/paginaagradecimento.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="ptbr">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro Concluído</title>
 </head>
 <body>
-    <form>
-        <form action="Agradecimento.html"method=get></form>
-        <h>Obrigado por sua inscrição</h>
+
+    <!-- Título principal -->
+    <h1>Obrigado pela sua inscrição!</h1>
+
+    <!-- Mensagem de confirmação -->
+    <p>Seu cadastro foi realizado com sucesso.</p>
+    <p>Em breve, você receberá novidades no seu e-mail.</p>
+
+    <!-- Link para voltar ao início -->
+    <a href="index.html">Voltar para o Início</a>
+
 </body>
 </html>
