revisao classe css e clone microsoft

--- a/aula3atividades/Início.html
+++ b/aula3atividades/Início.html
@@ -26,7 +26,7 @@
 <strong><p>Pense Como Um Artista: </p></strong>
 <P>Pense como um artista: e tenha uma vida mais criativa e produtiva</P>
 <img src="./capa pense como um artista.jpg" width="150">
-<p>por R$29,90</p>
+<p>Por R$29,90</p>
 <button>Comprar Agora</button>
 </u>
 
@@ -36,12 +36,12 @@
 
 <u>
     <strong><p>Pense e Ore </p></strong>
-    <p>pense e ore:mensagens inspiradoras para um novo tempo</p>
+    <p>Pense e Ore:mensagens inspiradoras para um novo tempo</p>
     <img src="./capa de livro pense e ore.jpg" width="150"
     <br/>
     <br/>
     <del>de:49,90</del>
-    <por>R$29,90</por>
+    <por>R$39,90</por>
     <br/>
     <button>Aproveite</button>
     </u>
